@@ -30,6 +30,10 @@ namespace MUSIC {
     int end () const { return end_; }
     void setBegin (int begin) { begin_ = begin; }
     void setEnd (int end) { end_ = end; }
+    bool operator< (const Interval& data) const
+    {
+      return begin () < data.begin ();
+    }
   };
 
 }
